# data-science-projects

./: README.md
.github/workflows/: test_build_ml_pipeline.yml
machine-learning-devops-engineer/build-ml-pipeline/: README.md  live_query.py  main.py  model_card_template.md  pyproject.toml  train.py
machine-learning-devops-engineer/build-ml-pipeline/build_ml_pipeline/: model.py  slice_performance.py  utils.py
machine-learning-devops-engineer/build-ml-pipeline/conf/: config.yaml
machine-learning-devops-engineer/build-ml-pipeline/metrics/: slice_output.txt
machine-learning-devops-engineer/build-ml-pipeline/starter/ml/: data.py  model.py
machine-learning-devops-engineer/build-ml-pipeline/tests/: test_api.py  test_pipeline.py
machine-learning-devops-engineer/dynamic-risk-assessment/: README.md  app.py  fullprocess.py  logfile  main.py  pyproject.toml
machine-learning-devops-engineer/dynamic-risk-assessment/conf/: config.json
machine-learning-devops-engineer/dynamic-risk-assessment/dynamic_risk_assessment/: api_calls.py  apicalls.py  deployment.py  diagnostics.py  ingestion.py  reporting.py  scoring.py  training.py  utils.py
machine-learning-devops-engineer/dynamic-risk-assessment/ingested_data/: ingested_files.txt
machine-learning-devops-engineer/dynamic-risk-assessment/models/: api_returns.txt  api_returns2.txt  trained_model.pkl
machine-learning-devops-engineer/dynamic-risk-assessment/practice_models/: api_returns.txt  trained_model.pkl
machine-learning-devops-engineer/predict-customer-churn/: README.md  churn_library.py  churn_notebook.ipynb  churn_script_logging_and_tests.py  constants.py  pyproject.toml  pytest.ini  tests.py
machine-learning-devops-engineer/predict-customer-churn/conf/: config.yaml
(+28 files in other folders)
