[tool.poetry]
name = "build_ml_pipeline"
version = "0.1.0"
description = "Example CI/CD machine learning pipeline"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.1.2"
pandas = "^1.5.0"
numpy = "^1.23.3"
pytest = "^7.1.3"
jupyter = "^1.0.0"
jupyterlab = "^3.4.7"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
hydra-core = "^1.2.0"
flake8 = "^5.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
