[tool.poetry]
name = "dynamic_risk_assessment"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.0"
Flask = "^2.2.2"
numpy = "^1.23.3"
sklearn = "^0.0"
matplotlib = "^3.6.1"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
